--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,11 +40,18 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding-right: 10px;
+  width: 50px;
 }
 
 .past {
   background-color: #d3d3d3;
   color: white;
+}
+
+.time_block_text {
+  width: 70%;
+  background: transparent;
 }
 
 .present {
